# ari-py

./: .gitignore  Makefile  pyproject.toml
ari/: __init__.py  client.py  events.py  exceptions.py  model.py  models.py
ari/repositories/: __init__.py  applications.py  asterisk.py  bridges.py  channels.py  device_states.py  endpoints.py  mailboxes.py  playbacks.py  recordings.py  sounds.py
ari_test/: conftest.py  test_applications_asterisk.py  test_bridges.py  test_channels.py  test_client.py  test_device_states.py  test_endpoints.py  test_events.py  test_exceptions.py  test_models.py  test_playbacks.py  test_recordings.py  test_sounds_mailboxes.py  test_websocket.py
examples/: bridge_example.py  originate_example.py
sample-api/: README.md
